<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/titleCardView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gradientBG_endColor">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_menu_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/mainMenuCardView"
        android:layout_width="0dp"
        android:layout_height="450dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/listOfSongs_BGcolor"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCardView">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/song1Card"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/song1TextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#80000000"
                        android:elevation="1dp"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:selectAllOnFocus="false"
                        android:text="@string/song1_title"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/song1ImgBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/eheads_circus"
                        tools:ignore="SpeakableTextPresentCheck" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/song2Card"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/song2TextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#80000000"
                        android:elevation="1dp"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:selectAllOnFocus="false"
                        android:text="@string/song2_title"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/song2ImgBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/rivermaya_atomicbomb"
                        tools:ignore="SpeakableTextPresentCheck" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/song3CardView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/song3TextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#80000000"
                        android:elevation="1dp"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:selectAllOnFocus="false"
                        android:text="@string/song3_title"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/song3ImgBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/thewho_whosnext"
                        tools:ignore="SpeakableTextPresentCheck" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/song4CardView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/song4TextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#80000000"
                        android:elevation="1dp"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:selectAllOnFocus="false"
                        android:text="@string/song4_title"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/song4ImgBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/aha_hurtinghighandlow"
                        tools:ignore="SpeakableTextPresentCheck" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/song5CardView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/song5TextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#80000000"
                        android:elevation="1dp"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:selectAllOnFocus="false"
                        android:text="@string/song5_title"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/song5ImgBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/gnr_useyourillusion"
                        tools:ignore="SpeakableTextPresentCheck" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>